# RAG-Code

./: .gitattributes  .gitignore  Resources.md
backend/: pyproject.toml  test_code.ipynb
backend-orig/: pyproject.toml  test_code.ipynb
backend-orig/app/: main.py
backend-orig/app/chat/: admin.py  api.py  schemas.py
backend-orig/app/chat/agents/chat_agent/nodes/: retrieval.py
backend-orig/app/chat/agents/generation_agent/: state.py
backend-orig/app/chat/agents/retrieval_agent/: agent.py  state.py
backend-orig/app/chat/agents/retrieval_agent/nodes/: assessor.py
backend-orig/app/core/: celery_app.py
backend-orig/app/indexing/: admin.py  api.py  indexer.py  schemas.py  tasks.py
backend/app/chat/: crud.py
backend/app/chat/agents/basic_rag/nodes/: generation.py  retrieval.py
backend/app/chat/agents/chat_agent/: agent.py  state.py
backend/app/chat/agents/chat_agent/nodes/: fallback.py  intent_router.py  simple_assistant.py
backend/app/chat/agents/generation_agent/: agent.py
backend/app/chat/agents/generation_agent/nodes/: evaluation.py  generation.py
backend/app/chat/agents/retrieval_agent/nodes/: retriever.py  selector.py
backend/app/core/: clients.py
backend/app/indexing/: crud.py  github_parsing.py  indexer.py  schemas.py
docs/: Indexing_and_Retrieval_for_Semantic_Search_of_Github_Repos.docx  Indexing_for__github-semantic-search.docx  Indexing_inside_github-semantic-search.docx  Semantic_Search_on_Github_Repo_Contents.docx
frontend-template/: package-lock.json
frontend-template/src/: App.tsx  vite-env.d.ts
(+6 files in other folders)
