[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "celery[redis]>=5.5.3",
    "fastapi>=0.116.1",
    "greenlet>=3.2.4",
    "httpx>=0.28.1",
    "langgraph>=0.6.7",
    "pinecone>=7.3.0",
    "pinecone-text[splade]>=0.11.0",
    "pydantic>=2.11.7",
    "sqladmin>=0.21.0",
    "sqlalchemy>=2.0.43",
]
