[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "openai>=1.109.1",
    "pinecone>=7.3.0",
    "pydantic>=2.11.9",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
]
